--- a/code/package.json
+++ b/code/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^6.0.0",
     "code": "file:",
     "dotenv": "^16.5.0",
+    "ejs": "^3.1.10",
     "express": "^5.1.0",
     "mysql2": "^3.14.1"
   },
