--- a/code/package.json
+++ b/code/package.json
@@ -19,7 +19,8 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
-    "mysql2": "^3.14.1"
+    "mysql2": "^3.14.1",
+    "node-cron": "^4.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
