--- a/code/package.json
+++ b/code/package.json
@@ -20,7 +20,8 @@
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "mysql2": "^3.14.1",
-    "node-cron": "^4.1.0"
+    "node-cron": "^4.1.0",
+    "nodemailer": "^7.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
